--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Vithusan Thavarajah!</h1>
+        		<h1>Hi there, I'm Vithusan!</h1>
 				<p> Welcome to my personal website! </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
