--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Vithusan!</h1>
-				<p> Welcome to my personal website! </p>
+        		<h1>Coming Soon...!</h1>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
