--- a/index.html
+++ b/index.html
@@ -6,24 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/resume">Resume</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Coming Soon...!</h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:thavarajah.vithusan@gmail.com">email</a></li>
-        		<li><a href="https://github.com/vithavar">github.com/vithavar</a></li>
-			</ul>
-		</footer>
+    		</div>
+		</div>
 	</body>
 </html>
