--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	</head>
 	<body>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Coming Soon...!</h1>
-    		</div>
+        	<h1>Coming Soon.</h1><span>.</span><span>.</span><span>.</span></p>
 		</div>
 	</body>
 </html>
